[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://ui-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/GUI/title.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Options.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 640.0
margin_bottom = 360.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="Panel"]
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/MainMenu"]
margin_top = -24.0
margin_right = 640.0
margin_bottom = 224.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MainMenu"]
margin_left = 192.0
margin_top = 200.0
margin_right = 448.0
margin_bottom = 344.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnCreateMatch" type="Button" parent="Panel/MainMenu/VBoxContainer"]
margin_right = 256.0
margin_bottom = 20.0
shortcut_in_tooltip = false
text = "Criar partida"

[node name="BtnJoinMatch" type="Button" parent="Panel/MainMenu/VBoxContainer"]
margin_top = 24.0
margin_right = 256.0
margin_bottom = 44.0
theme = ExtResource( 2 )
shortcut_in_tooltip = false
text = "Entrar em partida"

[node name="BtnHowToPlay" type="Button" parent="Panel/MainMenu/VBoxContainer"]
margin_top = 48.0
margin_right = 256.0
margin_bottom = 68.0
theme = ExtResource( 2 )
shortcut_in_tooltip = false
text = "Como jogar"

[node name="BtnOptions" type="Button" parent="Panel/MainMenu/VBoxContainer"]
margin_top = 72.0
margin_right = 256.0
margin_bottom = 92.0
theme = ExtResource( 2 )
shortcut_in_tooltip = false
text = "Opções"

[node name="BtnCredits" type="Button" parent="Panel/MainMenu/VBoxContainer"]
margin_top = 96.0
margin_right = 256.0
margin_bottom = 116.0
theme = ExtResource( 2 )
shortcut_in_tooltip = false
text = "Créditos"

[node name="Options" parent="Panel" instance=ExtResource( 4 )]
visible = false
